--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+<iframe
+  class="w-full h-52 sm:h-60 rounded-xl border border-slate-800"
+  src="https://www.youtube.com/embed/7PzaHv0ql8Q"
+  title="Balu AI Christmas Edit"
+  ...
+></iframe><!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
