--- a/index.html
+++ b/index.html
@@ -1502,4 +1502,17 @@
   <p class="text-[10px] text-gray-500 mt-1">
     *Only Balu’s own AI edit videos. No movies or other copyrighted content.
   </p>
+</div><div class="aspect-w-16 aspect-h-9 w-full mb-3">
+  <iframe
+    class="w-full h-52 sm:h-60 rounded-xl border border-slate-800"
+    src="https://www.youtube.com/embed/m158PjU_XS8"
+    title="Balu AI Spiritual Edit"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen>
+  </iframe>
 </div>
+
+<p class="text-xs sm:text-sm text-slate-300">
+  A peaceful spiritual AI short created by Balu Universe.
+</p>
